--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
         android:theme="@style/AppTheme.FullScreen.Light"
         tools:replace="android:allowBackup, android:label"
         tools:targetApi="n">
-        <activity android:name=".activities.MostPlayActivity"></activity>
+        <activity android:name=".activities.TmpActivity"></activity>
+        <activity android:name=".activities.MostPlayActivity" />
         <activity android:name=".activities.LastAddActivity" />
         <activity android:name=".activities.HistoryActivity" />
         <activity android:name=".activities.RegisterActivity" />
